Profile Controller changed Performnace Controller changed added name and image ajax requests for disciplines and courses

--- a/Programmania/Views/Course/Disciplines.cshtml
+++ b/Programmania/Views/Course/Disciplines.cshtml
@@ -82,17 +82,12 @@
                 <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
             </div>
     </footer>
-    </div>
-    
-
-   
-
-       
+    </div>      
 
     <script>
         AOS.init();
     </script>
 
-@*    <script ript type="text/javascript" src="~/js/disciplines.js"></script>*@
+    <script ript type="text/javascript" src="~/js/disciplines.js"></script>
 </body>
 </html>
