--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -97,7 +97,7 @@
 
                     <div class="level">
                         <div class="level__percent">
-                            <div class="ldBar label-center" data-preset="circle" data-value="30" data-transition-in="1000"
+                            <div class="ldBar label-center" data-preset="circle" data-value="@Model.ExpToNextLevelPercentage" data-transition-in="1000"
                                  style="width: 100%; height: 100%;"></div>
                         </div>
 
@@ -116,7 +116,7 @@
                             <div class="profile-info">
                                 <div class="profile-info__item">
                                     <h3>XP:</h3>
-                                    <p id="totalXp"></p>
+                                    <p>@Model.Expierence</p>
                                 </div>
                                 <hr />
                                 <div class="profile-info__item">
@@ -130,13 +130,28 @@
                         <div id="gamesTab" class="tabcontent">
                             <div class="profile-info">
                                 <div class="profile-info__item">
-                                    <h3>Games played:</h3>
-                                    <p id="gamesPlayed"></p>
+                                    <h3>Wined games:</h3>
+                                    <p>@Model.ChallengeStats.Wins</p>
                                 </div>
                                 <hr />
                                 <div class="profile-info__item">
-                                    <h3>Games wins:</h3>
-                                    <p id="gamesWined"></p>
+                                    <h3>Draw games:</h3>
+                                    <p>@Model.ChallengeStats.Draws</p>
+                                </div>
+                                <hr />
+                                <div class="profile-info__item">
+                                    <h3>Lose games</h3>
+                                    <p>@Model.ChallengeStats.Loses</p>
+                                </div>
+                                <hr />
+                                <div class="profile-info__item">
+                                    <h3>Games played:</h3>
+                                    <p>@Model.ChallengeStats.GamesPlayed</p>
+                                </div>
+                                <hr />
+                                <div class="profile-info__item">
+                                    <h3>Win rate:</h3>
+                                    <p>@Model.ChallengeStats.Winrate</p>
                                 </div>
                                 <hr />
                             </div>
