main.js from work

--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -234,7 +234,10 @@
                                 <h3>Level:</h3>
                                 <h3 id="level">32</h3>
                             </div>
-                            <p id="expiriance" class="level__info">Experience: </p>
+                            <div class="level__info">
+                                <p>Experience: </p>
+                                <p id="expiriance"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
