--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -110,7 +110,19 @@
 
 
 		<div class="courses-container" id="courses">
-			<h3 class="container__title">All Courses</h3>
+			<a href="Courses">
+		<div class="btn btn_link btn_link_blue">
+			<div class="btn_link__front">
+				All Courses
+			</div>
+			
+			<div class="btn_link__back btn_blue__back">
+				<div class="btn_link__next">
+					<img src="~/images/arrow_next.png" />
+				</div>
+			</div>
+		</div>
+	</a>
 
 
 			<div class="swiper">
@@ -242,7 +254,19 @@
 
 
 <div class="performance-container" id="performance">
-	<a href="Performance" class="container__title title_link">Performance</a>
+		<a href="Performance">
+		<div class="btn btn_link btn_link_blue">
+			<div class="btn_link__front">
+				Performance
+			</div>
+			
+			<div class="btn_link__back btn_blue__back">
+				<div class="btn_link__next">
+					<img src="~/images/arrow_next.png" />
+				</div>
+			</div>
+		</div>
+	</a>
 	<div class="performance" data-aos="zoom-in" data-aos-duration="1000">
 		<div class="chartArea">
 			<div class="chart-container">
@@ -256,7 +280,19 @@
 
 
 <div class="challenges-container" id="challenges">
-	<a href="Challenges" class="container__title title_link">Challenges</a>
+	<a href="Challenges">
+		<div class="btn btn_link btn_link_red">
+			<div class="btn_link__front">
+				Challenges
+			</div>
+			
+			<div class="btn_link__back btn_red__back">
+				<div class="btn_link__next">
+					<img src="~/images/arrow_next.png" />
+				</div>
+			</div>
+		</div>
+	</a>
 	<div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
 
 		<h3 class="winrate__info">Games win: 7/10</h3>
@@ -372,7 +408,7 @@
 
 
 <div class="achievment-container" id="achievments">
-	<h3 class="container__title">Achievments</h3>
+	<h3 class="container__title">Achievements</h3>
 	<h3 class="dev-text">In development</h3>
 </div>
 
