1. Fixed Main page 2. Added Discipline button to Current Course block in Main page 3. Changed Performance and Challenge headers 4. Fixed image in Disciplines page

--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -110,24 +110,24 @@
 
 
 
-            <div class="courses-container" id="courses">
-                <h3 class="container__title">All Courses</h3>
+		<div class="courses-container" id="courses">
+			<h3 class="container__title">All Courses</h3>
 
 
-                <div class="swiper">
-                    <div class="courses swiper-container">
-                        <div class="swiper-wrapper">
-                            @*<div class="swiper-slide">
-                                    <div class="course" style="background-color: #fcc9c0;">
-                                        <div class="course__content">
-                                            <div class="course__info">
-                                                <h2 class="course__title title_ruby">Ruby</h2>
-                                                <div class="course__percent percent_ruby">
-                                                    <div class="ldBar label-center" data-preset="circle" data-value="77"
-                                                         data-transition-in="1000" style="width: 100%; height: 100%">
-                                                    </div>
-                                                </div>
-                                            </div>
+			<div class="swiper">
+				<div class="courses swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="course" style="background-color: #fcc9c0;">
+								<div class="course__content">
+									<div class="course__info">
+										<h2 class="course__title title_ruby">Ruby</h2>
+										<div class="course__percent percent_ruby">
+											<div class="ldBar label-center" data-preset="circle" data-value="77"
+											data-transition-in="1000" style="width: 100%; height: 100%">
+										</div>
+									</div>
+								</div>
 
                                             <div class="course__button button_ruby">
                                                 <a href="Courses">
@@ -239,22 +239,26 @@
                     </div>
                 </div>
 
-                <div class="performance-container" id="performance">
-                    <a href="Performance" class="container__title title_link">Performance</a>
-                    <div class="performance" data-aos="zoom-in" data-aos-duration="1000">
-                        <div class="chartArea">
-                            <div class="chart-container">
-                                <canvas id="performanceChart">
-                                </canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
 
-                <div class="challenges-container" id="challenges">
-                    <a href="Challenges" class="container__title title_link">Challenges</a>
-                    <div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
+
+<div class="performance-container" id="performance">
+	<a href="Performance" class="container__title title_link">Performance</a>
+	<div class="performance" data-aos="zoom-in" data-aos-duration="1000">
+		<div class="chartArea">
+			<div class="chart-container">
+				<canvas id="performanceChart">
+				</canvas>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+<div class="challenges-container" id="challenges">
+	<a href="Challenges" class="container__title title_link">Challenges</a>
+	<div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
 
                         <div class="winrate__info">
                             <h3>Games win:</h3>
@@ -372,10 +376,10 @@
 
 
 
-                <div class="achievment-container" id="achievments">
-                    <h3 class="container__title">Achievments</h3>
-                    <h3 class="dev-text">In development</h3>
-                </div>
+<div class="achievment-container" id="achievments">
+	<h3 class="container__title">Achievments</h3>
+	<h3 class="dev-text">In development</h3>
+</div>
 
 
 
