--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -32,6 +32,7 @@
     <div class="wrapper">
         <main class="main">
             <header class="header" style="background-image: url('images/mainHeader.jpg');">
+                <div class="btn btn_logout">Log out</div>
                 <div id="nickname" class="header__title">
                     <p> Welcome to Programmania,</p>
                     <p id="nickname"></p>
@@ -79,7 +80,7 @@
                 <div id="courseBackground" class="course" style="background-color: #fcc9c0;">
 
                     <div class="flip flip_right">
-                        <div>
+                        <div class="flip__front">
                             <img id="courseImage" class="flip__front course__image" src="~/images/rubyCourse.png" />
                         </div>
 
@@ -98,11 +99,23 @@
                             </div>
                         </div>
 
-                        <div class="course__button button_ruby">
-                            <a href="Courses">
-                                Go to course
-                            </a>
+                        <div class="course__buttons">
+                            <div class="course__button button_ruby">
+                                <a href="Courses">
+                                    Go to course
+                                </a>
+                            </div>
+
+                            <div class="course__button button_ruby-white">
+                                <a href="#">
+                                    <div class="current-discipline">
+                                        <h3>Current discipline: </h3>
+                                        <h3 id="discipline">some discipline</h3>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -208,11 +221,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>*@
+                                </div>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
                     </div>
+                </div>
                 </div>
 
 
@@ -226,15 +240,16 @@
                                      style="width: 100%; height: 100%">
                                 </div>
                             </div>
-
-                            @*<h3 class="level__xp">25.600 / 28.850 XP</h3>*@
                         </div>
                         <div class="level-col-2" data-aos="fade-left" data-aos-duration="1000">
-                            <div class="level">
+                            <div class="level__text">
                                 <h3>Level:</h3>
                                 <h3 id="level">32</h3>
                             </div>
-                            <p id="expiriance" class="level__info">Experience: </p>
+                            <div class="level__text">
+                                <h3>Experience:</h3> 
+                                <h3 id="expiriance">32</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -243,7 +258,19 @@
 
 
 <div class="performance-container" id="performance">
-	<a href="Performance" class="container__title title_link">Performance</a>
+	<a href="Performance">
+		<div class="btn btn_link btn_link_blue">
+			<div class="btn_link__front">
+				Performance
+			</div>
+			
+			<div class="btn_link__back btn_blue__back">
+				<div class="btn_link__next">
+					<img src="~/images/arrow_next.png" />
+				</div>
+			</div>
+		</div>
+	</a>
 	<div class="performance" data-aos="zoom-in" data-aos-duration="1000">
 		<div class="chartArea">
 			<div class="chart-container">
@@ -257,7 +284,19 @@
 
 
 <div class="challenges-container" id="challenges">
-	<a href="Challenges" class="container__title title_link">Challenges</a>
+	<a href="Challenges">
+		<div class="btn btn_link btn_link_red">
+			<div class="btn_link__front">
+				Challenges
+			</div>
+			
+			<div class="btn_link__back btn_red__back">
+				<div class="btn_link__next">
+					<img src="~/images/arrow_next.png" />
+				</div>
+			</div>
+		</div>
+	</a>
 	<div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
 
                         <div class="winrate__info">
@@ -267,104 +306,6 @@
                         <div class="swiper">
                             <div id="challanges" class="challenges-swiper swiper-container">
                                 <div class="swiper-wrapper">
-                                    @*<div class="swiper-slide">
-                                            <a href="#">
-                                                <div class="challenge challenge_create">
-                                                    <div class="challenge-front">
-                                                        <div>
-                                                            <img class="challenge__image" src="~/images/pythonCourse.png" />
-                                                        </div>
-
-                                                        <div class="challenge-content">
-                                                            <div class="challenge__avatar">
-                                                                <img src="images/avatarImg.png" alt="Avatar image" />
-                                                            </div>
-
-                                                            <h3 class="challenge__username">John Johnson</h3>
-                                                            <p class="challenge__info">Propose a challenge in Python language</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="challenge-back challenge-back_create">
-                                                        <h3>Create the competition</h3>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <div class="swiper-slide">
-                                            <a href="#">
-                                                <div class="challenge challenge_accept">
-                                                    <div class="challenge-front">
-                                                        <div>
-                                                            <img class="challenge__image" src="~/images/cppCourse.png" alt="Avatar image" />
-                                                        </div>
-
-                                                        <div class="challenge-content">
-                                                            <div class="challenge__avatar">
-                                                                <img src="images/avatarImg.png" alt="Avatar image" />
-                                                            </div>
-
-                                                            <h3 class="challenge__username">Jack Jackson</h3>
-                                                            <p class="challenge__info">Challenged you on the C# language</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="challenge-back challenge-back_accept">
-                                                        <h3>Accept the competition</h3>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <div class="swiper-slide">
-                                            <a href="#">
-                                                <div class="challenge challenge_create">
-                                                    <div class="challenge-front">
-                                                        <div class="challenge__image" style="background-image: url('images/pythonCourse.png');">
-
-                                                        </div>
-
-                                                        <div class="challenge-content">
-                                                            <div class="challenge__avatar">
-                                                                <img src="images/avatarImg.png" alt="Avatar image" />
-                                                            </div>
-
-                                                            <h3 class="challenge__username">John Johnson</h3>
-                                                            <p class="challenge__info">Propose a challenge in Python language</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="challenge-back challenge-back_create">
-                                                        <h3>Create the competition</h3>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <div class="swiper-slide">
-                                            <a href="#">
-                                                <div class="challenge challenge_accept">
-                                                    <div class="challenge-front">
-                                                        <div class="challenge__image" style="background-image: url('images/CSharp.jpg');">
-
-                                                        </div>
-                                                        <div class="challenge-content">
-                                                            <div class="challenge__avatar">
-                                                                <img src="images/avatarImg.png" alt="Avatar image" />
-                                                            </div>
-
-                                                            <h3 class="challenge__username">Jack Jackson</h3>
-                                                            <p class="challenge__info">Challenged you on the C# language</p>
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="challenge-back challenge-back_accept">
-                                                        <h3>Accept the competition</h3>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>*@
                                 </div>
                             </div>
                             <div class="swiper-button-prev"></div>
