--- a/Programmania/wwwroot/css/Disciplines.css
+++ b/Programmania/wwwroot/css/Disciplines.css
@@ -69,6 +69,8 @@ html, body {
     width: 100%;
     height: 500px;
     margin: 0 auto;
+    transform: skew(-10deg, 0) !important;
+    box-shadow: 4px 4px 4px 7px #999;
 }
 
     .course__img img {
